Feature(Examples): Add more example for starter project

--- a/EcoApiEscen/EcoApiEscen.csproj
+++ b/EcoApiEscen/EcoApiEscen.csproj
@@ -15,4 +15,12 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\CommandLib\CommandLib.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Migrations" />
+    </ItemGroup>
+
 </Project>
