--- a/EcoApiEscen/appsettings.Development.json
+++ b/EcoApiEscen/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionsStrings": {
-    "mysql": "Server=myServerAddress;Database=myDataBase;Uid=myUsername;Pwd=myPassword;"
+    "mysql": "Server=localhost;Database=ecoWebTechDb;Uid=root;Pwd=password"
   }
 }
